syntax = "proto3";
package randomizer.v1;

import "google/protobuf/empty.proto";
// import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";



// Generated according to https://cloud.google.com/apis/design/standard_methods
service CommonService {
  rpc GetRandomTime(google.protobuf.Empty) returns (TimeResponse) {
    option (google.api.http) = {
      get: "/v1/random/time"
    };
  }

  rpc GetRandomSeason(GetCommonRequest) returns (SeasonResponse) {
    option (google.api.http) = {
      get: "/v1/random/season"
    };
  }

  rpc CreateCommon(CreateCommonRequest) returns (Common) {
    option (google.api.http) = {
      post: "/v1/commons"
      body: "common"
    };
  }

  rpc UpdateCommon(UpdateCommonRequest) returns (Common) {
    option (google.api.http) = {
      patch: "/v1/{common.name=commons/*}"
      body: "common"
    };
  }

  rpc DeleteCommon(DeleteCommonRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/{name=commons/*}"
    };
  }
}

message Common {}

message TimeResponse {
  // The parent resource name, for example, "shelves/shelf1"
  uint64 secs = 1;

  // The maximum number of items to return.
  uint32 nanos = 2;
}

enum Season {
  SPRING = 0;
  SUMMER = 1;
  AUTUMN = 2; 
  WINTER = 3;
}

message SeasonResponse {
  Season season = 1;
} 



message GetCommonRequest {
  // The field will contain name of the resource requested.
  string name = 1;
}

message CreateCommonRequest {
  // The parent resource name where the common is to be created.
  string parent = 1;

  // The common id to use for this common.
  string common_id = 2;

  // The common resource to create.
  // The field name should match the Noun in the method name.
  Common common = 3;
}

message UpdateCommonRequest {
  // The common resource which replaces the resource on the server.
  Common common = 1;

  // The update mask applies to the resource. For the `FieldMask` definition,
  // see https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#fieldmask
}

message DeleteCommonRequest {
  // The resource name of the common to be deleted.
  string name = 1;
}
